Autenticacion y css para autualizacion

--- a/VulApp/appsettings.json
+++ b/VulApp/appsettings.json
@@ -11,5 +11,9 @@
   },
   "TenantSettings": {
     "TenantId": "1111111111"
+  },
+  "Jwt": {
+    "Key": "YourSecretKeyForAuthenticationOfApplication",
+    "Issuer": "itp.com"
   }
 }
