--- a/VulApp/appsettings.json
+++ b/VulApp/appsettings.json
@@ -13,7 +13,8 @@
     "TenantId": "1111111111"
   },
   "Jwt": {
-    "Key": "YourSecretKeyForAuthenticationOfApplication",
-    "Issuer": "itp.com"
+    "Issuer": "https://joydipkanjilal.com/",
+    "Audience": "https://joydipkanjilal.com/",
+    "Key": "This is a sample secret key - please don't use in production environment.'"
   }
 }
